first commit, needs some styling

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
 body {
-  margin: 0;
+  margin: auto;
+  line-height: 1.5;
+  text-align: center;
+  background-color: whitesmoke;
+  width: 90%;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,4 +14,84 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
+* {
+  margin: 0;
+}
+
+html, body {
+  height: 100%;
+}
+
+img, picture, video, canvas, svg {
+  display: block;
+  max-width: 100%;
+}
+
+input, button, textarea, select {
+  font: inherit;
+}
+
+p, h1, h2, h3, h4, h5, h6 {
+  overflow-wrap: break-word;
+}
+
+#root, #__next {
+  isolation: isolate;
+}
+
+.info-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.info-box {
+  width: 200px;
+  height: 300px;
+  margin: auto 20px;
+  padding-bottom: 20px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.infection-box {
+  background-color: rgb(104, 151, 208);
+  border-bottom: 10px solid darkblue;
+  border-radius: 5px;
+}
+
+.recovery-box {
+  background-color: rgb(103, 205, 103);
+  border-bottom: 10px solid darkgreen;
+  border-radius: 5px;
+}
+
+.death-box {
+  background-color: rgb(209, 105, 105);
+  border-bottom: 10px solid darkred;
+  border-radius: 5px;
+}
+
+.active-box {
+  background-color: rgb(201, 179, 109);
+  border-bottom: 10px solid rgb(165, 129, 57);
+  border-radius: 5px;
+}
+
+select {
+  margin-top: 40px;
+  padding: 5px 80px;
+}
+
+header {
+  margin-bottom: 40px;
+  line-height: 2.5;
 }
